--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "bootstrap": "^4.4.1",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-spinners": "^0.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
