--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "hoempage": "https://b-weather-react-app.herokuapp.com/",
+  "homepage": "https://b-weather-react-app.herokuapp.com/",
   "name": "react-weather",
   "version": "0.1.0",
   "private": true,
