--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "homepage": "https://b-weather-react-app.herokuapp.com/",
   "name": "react-weather",
   "version": "0.1.0",
+  "engines": {
+    "node": "14.17.6"
+  },
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.15.4",
